--- a/css/grid.css
+++ b/css/grid.css
@@ -61,6 +61,70 @@
   position: relative;
 }
 
+.unit-content-distribute,
+.content-distribute {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -ms-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+}
+
+.unit-content-center,
+.unit-content-center-vertical {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-align-content: center;
+  -ms-flex-line-pack: center;
+  align-content: center;
+  -webkit-flex-direction: column wrap;
+  -ms-flex-direction: column wrap;
+  flex-flow: column wrap;
+}
+
+.unit-content-center-horizontal {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-align-content: center;
+  -ms-flex-line-pack: center;
+  align-content: center;
+  -webkit-flex-direction: row wrap;
+  -ms-flex-direction: row wrap;
+  flex-flow: row wrap;
+}
+
+.content-fill,
+.content-stretch {
+  -ms-flex-grow: 2;
+  -webkit-flex-grow: 2;
+  flex-grow: 2;
+  max-width: 100%; /* @bugfix: IE 10, 11 */
+}
+
+.content-shrink {
+  -ms-align-self: center;
+  -webkit-align-self: center;
+  align-self: center;
+}
+
 .unit-xs-hidden {
   display: none;
   visibility: hidden;
@@ -114,6 +178,82 @@
 .xs-3-4 {
   display: inline-block;
   visibility: visible;
+}
+
+.unit-xs-content-distribute,
+.xs-content-distribute {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -ms-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+}
+
+.unit-xs-content-center,
+.unit-xs-content-center-vertical {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-align-content: center;
+  -ms-flex-line-pack: center;
+  align-content: center;
+  -webkit-flex-direction: column wrap;
+  -ms-flex-direction: column wrap;
+  flex-flow: column wrap;
+}
+
+.unit-xs-content-center-horizontal {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-align-content: center;
+  -ms-flex-line-pack: center;
+  align-content: center;
+  -webkit-flex-direction: row wrap;
+  -ms-flex-direction: row wrap;
+  flex-flow: row wrap;
+}
+
+.xs-content-fill,
+.xs-content-stretch {
+  -ms-flex-grow: 2;
+  -webkit-flex-grow: 2;
+  flex-grow: 2;
+  max-width: 100%; /* @bugfix: IE 10, 11 */
+}
+
+.xs-content-shrink {
+  -ms-align-self: center;
+  -webkit-align-self: center;
+  align-self: center;
+}
+
+.unit-content-distribute[class*="unit-xs-"]:not([class*="xs-hidden"]),
+.unit-content-distribute[class*="xs-"]:not([class*="xs-hidden"]),
+.content-distribute[class*="unit-xs-"]:not([class*="xs-hidden"]),
+.content-distribute[class*="xs-"]:not([class*="xs-hidden"]),
+.unit-content-center:not([class*="xs-hidden"]),
+.unit-content-center-vertical:not([class*="xs-hidden"]),
+.unit-content-center-horizontal:not([class*="xs-hidden"]) {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 @media only screen and (min-width: 25em) {
@@ -171,6 +311,82 @@
   .s-3-4 {
     display: inline-block;
     visibility: visible;
+  }
+
+  .unit-s-content-distribute,
+  .s-content-distribute {
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -ms-flex-direction: column;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-pack: justify;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
+  }
+
+  .unit-s-content-center,
+  .unit-s-content-center-vertical {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-align-content: center;
+    -ms-flex-line-pack: center;
+    align-content: center;
+    -webkit-flex-direction: column wrap;
+    -ms-flex-direction: column wrap;
+    flex-flow: column wrap;
+  }
+
+  .unit-s-content-center-horizontal {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-align-content: center;
+    -ms-flex-line-pack: center;
+    align-content: center;
+    -webkit-flex-direction: row wrap;
+    -ms-flex-direction: row wrap;
+    flex-flow: row wrap;
+  }
+
+  .s-content-fill,
+  .s-content-stretch {
+    -ms-flex-grow: 2;
+    -webkit-flex-grow: 2;
+    flex-grow: 2;
+    max-width: 100%; /* @bugfix: IE 10, 11 */
+  }
+
+  .s-content-shrink {
+    -ms-align-self: center;
+    -webkit-align-self: center;
+    align-self: center;
+  }
+
+  .unit-content-distribute[class*="unit-s-"]:not([class*="s-hidden"]),
+  .unit-content-distribute[class*="s-"]:not([class*="s-hidden"]),
+  .content-distribute[class*="unit-s-"]:not([class*="s-hidden"]),
+  .content-distribute[class*="s-"]:not([class*="s-hidden"]),
+  .unit-content-center:not([class*="s-hidden"]),
+  .unit-content-center-vertical:not([class*="s-hidden"]),
+  .unit-content-center-horizontal:not([class*="s-hidden"]) {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
   }
 
 }
@@ -301,6 +517,82 @@
     visibility: visible;
   }
 
+  .unit-m-content-distribute,
+  .m-content-distribute {
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -ms-flex-direction: column;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-pack: justify;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
+  }
+
+  .unit-m-content-center,
+  .unit-m-content-center-vertical {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-align-content: center;
+    -ms-flex-line-pack: center;
+    align-content: center;
+    -webkit-flex-direction: column wrap;
+    -ms-flex-direction: column wrap;
+    flex-flow: column wrap;
+  }
+
+  .unit-m-content-center-horizontal {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-align-content: center;
+    -ms-flex-line-pack: center;
+    align-content: center;
+    -webkit-flex-direction: row wrap;
+    -ms-flex-direction: row wrap;
+    flex-flow: row wrap;
+  }
+
+  .m-content-fill,
+  .m-content-stretch {
+    -ms-flex-grow: 2;
+    -webkit-flex-grow: 2;
+    flex-grow: 2;
+    max-width: 100%; /* @bugfix: IE 10, 11 */
+  }
+
+  .m-content-shrink {
+    -ms-align-self: center;
+    -webkit-align-self: center;
+    align-self: center;
+  }
+
+  .unit-content-distribute[class*="unit-m-"]:not([class*="m-hidden"]),
+  .unit-content-distribute[class*="m-"]:not([class*="m-hidden"]),
+  .content-distribute[class*="unit-m-"]:not([class*="m-hidden"]),
+  .content-distribute[class*="m-"]:not([class*="m-hidden"]),
+  .unit-content-center:not([class*="m-hidden"]),
+  .unit-content-center-vertical:not([class*="m-hidden"]),
+  .unit-content-center-horizontal:not([class*="m-hidden"]) {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+  }
+
 }
 
 @media only screen and (min-width: 60em) {
@@ -429,31 +721,80 @@
     visibility: visible;
   }
 
-}
+  .unit-l-content-distribute,
+  .l-content-distribute {
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -ms-flex-direction: column;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-pack: justify;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
+  }
 
-.unit-content-distribute,
-.content-distribute {
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -ms-flex-direction: column;
-  -webkit-flex-direction: column;
-  flex-direction: column;
-  -ms-flex-pack: justify;
-  -webkit-justify-content: space-between;
-  justify-content: space-between;
-}
+  .unit-l-content-center,
+  .unit-l-content-center-vertical {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-align-content: center;
+    -ms-flex-line-pack: center;
+    align-content: center;
+    -webkit-flex-direction: column wrap;
+    -ms-flex-direction: column wrap;
+    flex-flow: column wrap;
+  }
 
-.content-fill,
-.content-stretch {
-  -ms-flex-grow: 2;
-  -webkit-flex-grow: 2;
-  flex-grow: 2;
-  max-width: 100%; /* @bugfix: IE 10, 11 */
-}
+  .unit-l-content-center-horizontal {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-align-content: center;
+    -ms-flex-line-pack: center;
+    align-content: center;
+    -webkit-flex-direction: row wrap;
+    -ms-flex-direction: row wrap;
+    flex-flow: row wrap;
+  }
 
-.content-shrink {
-  -ms-align-self: center;
-  -webkit-align-self: center;
-  align-self: center;
+  .l-content-fill,
+  .l-content-stretch {
+    -ms-flex-grow: 2;
+    -webkit-flex-grow: 2;
+    flex-grow: 2;
+    max-width: 100%; /* @bugfix: IE 10, 11 */
+  }
+
+  .l-content-shrink {
+    -ms-align-self: center;
+    -webkit-align-self: center;
+    align-self: center;
+  }
+
+  .unit-content-distribute[class*="unit-l-"]:not([class*="l-hidden"]),
+  .unit-content-distribute[class*="l-"]:not([class*="l-hidden"]),
+  .content-distribute[class*="unit-l-"]:not([class*="l-hidden"]),
+  .content-distribute[class*="l-"]:not([class*="l-hidden"]),
+  .unit-content-center:not([class*="l-hidden"]),
+  .unit-content-center-vertical:not([class*="l-hidden"]),
+  .unit-content-center-horizontal:not([class*="l-hidden"]) {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+  }
+
 }
