--- a/css/grid.css
+++ b/css/grid.css
@@ -61,8 +61,7 @@
   position: relative;
 }
 
-.unit-content-distribute,
-.content-distribute {
+.unit-content-distribute {
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
@@ -125,7 +124,8 @@
   align-self: center;
 }
 
-.unit-xs-hidden {
+.unit-xs-hidden,
+.xs-0 {
   display: none;
   visibility: hidden;
 }
@@ -178,6 +178,21 @@
 .xs-3-4 {
   display: inline-block;
   visibility: visible;
+}
+
+.unit-xs-1-2[class*="-content-"],
+.xs-1-2[class*="-content-"],
+.unit-xs-1-3[class*="-content-"],
+.xs-1-3[class*="-content-"],
+.unit-xs-2-3[class*="-content-"],
+.xs-2-3[class*="-content-"],
+.unit-xs-1-4[class*="-content-"],
+.xs-1-4[class*="-content-"],
+.unit-xs-3-4[class*="-content-"],
+.xs-3-4[class*="-content-"] {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .unit-xs-content-distribute,
@@ -244,21 +259,10 @@
   align-self: center;
 }
 
-.unit-content-distribute[class*="unit-xs-"]:not([class*="xs-hidden"]),
-.unit-content-distribute[class*="xs-"]:not([class*="xs-hidden"]),
-.content-distribute[class*="unit-xs-"]:not([class*="xs-hidden"]),
-.content-distribute[class*="xs-"]:not([class*="xs-hidden"]),
-.unit-content-center:not([class*="xs-hidden"]),
-.unit-content-center-vertical:not([class*="xs-hidden"]),
-.unit-content-center-horizontal:not([class*="xs-hidden"]) {
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-}
-
 @media only screen and (min-width: 25em) {
 
-  .unit-s-hidden {
+  .unit-s-hidden,
+  .s-0 {
     display: none;
     visibility: hidden;
   }
@@ -311,6 +315,21 @@
   .s-3-4 {
     display: inline-block;
     visibility: visible;
+  }
+
+  .unit-s-1-2[class*="-content-"],
+  .s-1-2[class*="-content-"],
+  .unit-s-1-3[class*="-content-"],
+  .s-1-3[class*="-content-"],
+  .unit-s-2-3[class*="-content-"],
+  .s-2-3[class*="-content-"],
+  .unit-s-1-4[class*="-content-"],
+  .s-1-4[class*="-content-"],
+  .unit-s-3-4[class*="-content-"],
+  .s-3-4[class*="-content-"] {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
   }
 
   .unit-s-content-distribute,
@@ -377,23 +396,12 @@
     align-self: center;
   }
 
-  .unit-content-distribute[class*="unit-s-"]:not([class*="s-hidden"]),
-  .unit-content-distribute[class*="s-"]:not([class*="s-hidden"]),
-  .content-distribute[class*="unit-s-"]:not([class*="s-hidden"]),
-  .content-distribute[class*="s-"]:not([class*="s-hidden"]),
-  .unit-content-center:not([class*="s-hidden"]),
-  .unit-content-center-vertical:not([class*="s-hidden"]),
-  .unit-content-center-horizontal:not([class*="s-hidden"]) {
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-  }
-
 }
 
 @media only screen and (min-width: 38em) {
 
-  .unit-m-hidden {
+  .unit-m-hidden,
+  .m-0 {
     display: none;
     visibility: hidden;
   }
@@ -517,6 +525,21 @@
     visibility: visible;
   }
 
+  .unit-m-1-2[class*="-content-"],
+  .m-1-2[class*="-content-"],
+  .unit-m-1-3[class*="-content-"],
+  .m-1-3[class*="-content-"],
+  .unit-m-2-3[class*="-content-"],
+  .m-2-3[class*="-content-"],
+  .unit-m-1-4[class*="-content-"],
+  .m-1-4[class*="-content-"],
+  .unit-m-3-4[class*="-content-"],
+  .m-3-4[class*="-content-"] {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+  }
+
   .unit-m-content-distribute,
   .m-content-distribute {
     display: -ms-flexbox;
@@ -581,23 +604,12 @@
     align-self: center;
   }
 
-  .unit-content-distribute[class*="unit-m-"]:not([class*="m-hidden"]),
-  .unit-content-distribute[class*="m-"]:not([class*="m-hidden"]),
-  .content-distribute[class*="unit-m-"]:not([class*="m-hidden"]),
-  .content-distribute[class*="m-"]:not([class*="m-hidden"]),
-  .unit-content-center:not([class*="m-hidden"]),
-  .unit-content-center-vertical:not([class*="m-hidden"]),
-  .unit-content-center-horizontal:not([class*="m-hidden"]) {
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-  }
-
 }
 
 @media only screen and (min-width: 60em) {
 
-  .unit-l-hidden {
+  .unit-l-hidden,
+  .l-0 {
     display: none;
     visibility: hidden;
   }
@@ -721,6 +733,21 @@
     visibility: visible;
   }
 
+  .unit-l-1-2[class*="-content-"],
+  .l-1-2[class*="-content-"],
+  .unit-l-1-3[class*="-content-"],
+  .l-1-3[class*="-content-"],
+  .unit-l-2-3[class*="-content-"],
+  .l-2-3[class*="-content-"],
+  .unit-l-1-4[class*="-content-"],
+  .l-1-4[class*="-content-"],
+  .unit-l-3-4[class*="-content-"],
+  .l-3-4[class*="-content-"] {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+  }
+
   .unit-l-content-distribute,
   .l-content-distribute {
     display: -ms-flexbox;
@@ -783,18 +810,6 @@
     -ms-align-self: center;
     -webkit-align-self: center;
     align-self: center;
-  }
-
-  .unit-content-distribute[class*="unit-l-"]:not([class*="l-hidden"]),
-  .unit-content-distribute[class*="l-"]:not([class*="l-hidden"]),
-  .content-distribute[class*="unit-l-"]:not([class*="l-hidden"]),
-  .content-distribute[class*="l-"]:not([class*="l-hidden"]),
-  .unit-content-center:not([class*="l-hidden"]),
-  .unit-content-center-vertical:not([class*="l-hidden"]),
-  .unit-content-center-horizontal:not([class*="l-hidden"]) {
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
   }
 
 }
